# Yongzhen-Home

home-backend/: .env  auth.py  database.py  door.py  helper.py  main.py  pyproject.toml
home-backend/schemas/: user_schemas.py
home-backend/services/: user_service.py
home-backend/utils/: user_utils.py
home-frontend/: .env  .env.developement  package-lock.json  package.json
home-frontend/src/: App.tsx  index.tsx
home-frontend/src/component/GlassmorphismHoverEffectsNavbar/: index.tsx
home-frontend/src/component/Home/: index.tsx
home-frontend/src/component/Layout/: AuthLayout.tsx
home-frontend/src/component/Login/: index.tsx  type.tsx
home-frontend/src/component/Member/: index.tsx
home-frontend/src/enviroment/: api.tsx  axios.tsx
home-frontend/src/hook/: useAuth.tsx
home-frontend/src/styles/: global.scss  index.scss
home-frontend/src/styles/components/: GlassmorphismHoverEffects-navbar.scss  Login.scss  index.scss
